bld/wipfc/test/neg/neg3.ipf
:userdoc.
:title.Negative 3
:docprof.
.* Document has no content
:euserdoc.


